# dynomite

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
dynomite/: Cargo.toml  all.html  index.html  macro.attr_map.html  sidebar-items.js  trait.Attribute.html  trait.DynamoDbExt.html  trait.FromAttributes.html  trait.IntoAttributes.html  trait.Item.html  type.Attributes.html
dynomite-derive/: Cargo.toml
dynomite-derive/src/: lib.rs
dynomite/error/: enum.AttributeError.html  index.html
dynomite/examples/: demo.rs  lambda.rs  local.rs  stack.cf.yml
dynomite/retry/: enum.Policy.html  index.html  struct.RetryingDynamoDb.html  trait.Retries.html
dynomite/src/: lib.rs  retry.rs
dynomite/tests/: derived.rs
dynomite/trybuild-tests/fail/: item-not-on-struct-fail.stderr
dynomite_derive/: all.html  derive.Attribute.html  derive.Attributes.html  derive.Item.html  index.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
src/dynomite/: error.rs.html  ext.rs.html  lib.rs.html  retry.rs.html
src/dynomite_derive/: attr.rs.html  lib.rs.html
