[package]
name = "dynomite-derive"
version = "0.10.0"
authors = ["softprops <d.tangren@gmail.com>", "Alexander Zaitsev <zamazan4ik@tut.by>"]
description = "Derives AWS DynamoDB dynomite types from native Rust struct types"
license = "MIT"
keywords = ["dynamodb", "rusoto", "rusoto_dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite-derive"
homepage = "https://github.com/rust-serverless/dynomite"
repository = "https://github.com/rust-serverless/dynomite"
edition = "2018"

[badges]
coveralls = { repository = "rust-serverless/dynomite" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = "1.0.91"
proc-macro2 = "1.0.37"
proc-macro-error = "1.0.4"
