[package]
name = "dynomite"
version = "0.10.0"
authors = ["softprops <d.tangren@gmail.com>", "Alexander Zaitsev <zamazan4ik@tut.by>"]
description = "Provides set of high-level productive DynamoDB interfaces"
license = "MIT"
keywords = ["dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite"
homepage = "https://github.com/rust-serverless/dynomite"
repository = "https://github.com/rust-serverless/dynomite"
edition = "2018"
categories = ["database"]

[badges]
coveralls = { repository = "rust-serverless/dynomite" }
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
again = "0.1"
aws-sdk-dynamodb = "0.6"
bytes = "1"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive", optional = true }
futures = "0.3"
log = "0.4"
# Disable default features since the `rustls` variant requires it. We re-enable `default` in our
# `default` build configuration - see the [features] below.

uuid = { version = "0.8", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
aws-config = "0.6"
env_logger = "0.9"
maplit = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
lambda_http = "0.4.0"
lambda_runtime = "0.4.0"
trybuild = "1.0"
rustversion = "1.0"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive" } # required by trybuild

[features]
default = [
  "uuid",
  "chrono",
  "derive"
]

derive = ["dynomite-derive"]
