[package]
name = "dynomite"
version = "0.10.0"
authors = ["softprops <d.tangren@gmail.com>", "Alexander Zaitsev <zamazan4ik@tut.by>"]
description = "Provides set of high-level productive DynamoDB interfaces"
license = "MIT"
keywords = ["dynamodb", "rusoto", "rusoto_dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite"
homepage = "https://github.com/rust-serverless/dynomite"
repository = "https://github.com/rust-serverless/dynomite"
edition = "2018"
categories = ["database"]

[badges]
coveralls = { repository = "rust-serverless/dynomite" }
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.53"
again = "0.1.2"
bytes = "1.1.0"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive", optional = true }
futures = "0.3.21"
log = "0.4.16"
# Disable default features since the `rustls` variant requires it. We re-enable `default` in our
# `default` build configuration - see the [features] below.
rusoto_core = { version = "0.48.0", optional = true, default_features = false }
rusoto_dynamodb = { version = "0.48.0", optional = true, default_features = false }
uuid = { version = "1.0.0", features = ["v4"], optional = true }
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
maplit = "1.0.2"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros"] }
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
trybuild = "1.0.60"
rustversion = "1.0.6"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive" } # required by trybuild

[features]
default = [
  "uuid",
  "chrono",
  "derive",
  "rusoto_core",
  "rusoto_dynamodb",
  # Enable the `default` features of these crates.
  "rusoto_core/default",
  "rusoto_dynamodb/default"
]

rustls = [
  "uuid",
  "chrono",
  "derive",
  "rusoto_core",
  "rusoto_dynamodb",
  "rusoto_core/rustls",
  "rusoto_dynamodb/rustls"
]
derive = ["dynomite-derive"]
