[package]
name = "dynomite"
version = "0.10.0"
authors = ["softprops <d.tangren@gmail.com>", "Alexander Zaitsev <zamazan4ik@tut.by>"]
description = "Provides set of high-level productive DynamoDB interfaces"
license = "MIT"
keywords = ["dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite"
homepage = "https://github.com/rust-serverless/dynomite"
repository = "https://github.com/rust-serverless/dynomite"
edition = "2018"
categories = ["database"]

[badges]
coveralls = { repository = "rust-serverless/dynomite" }
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1.1.0"
aws-sdk-dynamodb = "0.10.1"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive", optional = true }
log = "0.4.16"
uuid = { version = "1.0.0", features = ["v4"], optional = true }
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
aws-config = "0.47.0"
env_logger = "0.9.0"
maplit = "1.0.2"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros"] }
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
trybuild = "1.0.60"
rustversion = "1.0.6"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive" } # required by trybuild

[features]
default = [
  "uuid",
  "chrono",
  "derive"
]

derive = ["dynomite-derive"]
